bilinear instead of bicubic

--- a/master_thesis/gee/Download_Prec.ipynb
+++ b/master_thesis/gee/Download_Prec.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f7b793278624210b2adbb6d87d5b414",
+       "model_id": "61b0aa5abdbd44489972d113c5fe672b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Count:  61\n"
+      "Count:  2251\n"
      ]
     }
    ],
@@ -84,8 +84,9 @@
     "\n",
     "prec = ee.ImageCollection('UCSB-CHG/CHIRPS/DAILY') \\\n",
     "            .select('precipitation') \\\n",
-    "            .filter(ee.Filter.date('2000-01-01', '2022-01-01'))\n",
-    "prec = prec.map(lambda image: image.resample('bicubic').reproject(res).clip(kazbegi).rename('Prec'))\n",
+    "            .filter(ee.Filter.date('2015-01-01', '2022-02-26'))\n",
+    "\n",
+    "prec = prec.map(lambda image: image.resample('bilinear').reproject(res).clip(kazbegi).rename('Prec'))\n",
     "\n",
     "\n",
     "def getCover(image, aoi, scale):\n",
@@ -113,7 +114,7 @@
     "print('Count: ', count.getInfo())\n",
     "\n",
     "vis_params = {\n",
-    "      'min': -20,\n",
+    "      'min': 0,\n",
     "      'max': 30,\n",
     "      'palette': ['blue', 'red']\n",
     "}\n",
@@ -124,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C:\\\\Users\\\\andre\\\\OneDrive\\\\Dokumente\\\\Masterarbeit\\\\GEE\\\\Download_Leonie', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\python37.zip', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\DLLs', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm', '', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\andre\\\\.ipython', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/']\n"
+      "['C:\\\\Users\\\\andre\\\\OneDrive\\\\Dokumente\\\\Masterarbeit\\\\GEE\\\\Download_Leonie', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\python37.zip', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\DLLs', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm', '', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\andre\\\\anaconda3\\\\envs\\\\starfm\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\andre\\\\.ipython', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/', 'C:/Users/andre/OneDrive/Dokumente/Masterarbeit/GEE/Download_Leonie/']\n"
      ]
     }
    ],
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +320,7 @@
     "           })\n",
     "    \n",
     "  #  sat_df = pd.merge(modis_df, landsat_df, how='left')\n",
-    "    poly = 'p'+str(polygonname)  #create a polygon label\n",
+    "    poly = str(polygonname)  #create a polygon label\n",
     "\n",
     "    sat_df.to_csv(r'.\\datetables_prec\\polygon_' + poly + '.csv')\n",
     "       \n",
@@ -348,26 +349,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_imagery(prec, kazbegi, 'kaz', 1)"
+    "download_imagery(prec, kazbegi, '_prec', 1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
