--- a/master_thesis/gee/Download_datetime.ipynb
+++ b/master_thesis/gee/Download_datetime.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e001d8025e9045bda6b4f0f5a506c7f8",
+       "model_id": "5a1dc89a27f147d99d5658a54f86272f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,14 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Count:  6850\n"
+      "{'type': 'Image', 'bands': [{'id': 'time', 'data_type': {'type': 'PixelType', 'precision': 'float', 'min': 0, 'max': 25.5}, 'crs': 'SR-ORG:6974', 'crs_transform': [463.312716528, 0, -20015109.354, 0, -463.312716527, 10007554.677]}], 'properties': {'system:time_start': 1026000000000, 'system:index': '2002_07_07'}}\n",
+      "Count:  6847\n"
      ]
     }
    ],
@@ -84,7 +85,7 @@
     "snow = snow.map(lambda image: image.reproject(res).clip(kazbegi))\n",
     "\n",
     "time = ee.ImageCollection('MODIS/006/MYD11A1') \\\n",
-    "        .filter(ee.Filter.date('2000-01-01', '2022-12-31')) \\\n",
+    "        .filter(ee.Filter.date('2002-07-07', '2022-12-31')) \\\n",
     "        .select(['Day_view_time']) \\\n",
     "        .sort('system:time_start')\n",
     "time = time.map(lambda image: image.resample('bicubic').reproject(res).clip(kazbegi).rename('time'))\n",
@@ -93,13 +94,15 @@
     "\n",
     "time = time.sort(\"system:time_start\")\n",
     "\n",
+    "print(time.first().getInfo())\n",
+    "\n",
     "count = time.size()\n",
     "print('Count: ', count.getInfo())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,11 +115,11 @@
     "featureCollection = time.flatten()\n",
     "\n",
     "task_config = {\n",
-    "    'folder':'bla',\n",
+    "    'folder':'time',\n",
     "    'fileFormat':'CSV'\n",
     "}\n",
     "\n",
-    "task = ee.batch.Export.table.toDrive(featureCollection, 'time_lst_aqua_total_new', **task_config)\n",
+    "task = ee.batch.Export.table.toDrive(featureCollection, 'time_lst_aqua_total', **task_config)\n",
     "task.start()"
    ]
   },
